# fraq

./: .code2docs.api_snapshot.json  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.cli  Dockerfile.websocket  LICENSE  MANIFEST.in  PKG-INFO  PLAN_REFACTORING.md  README.md  SUMD.md  SUMR.md  app.doql.less  code2docs.yaml  docker-compose.yml  goal.yaml  main_websocket.py  project.sh  pyproject.toml  pyqual.yaml  sumd.json
.github/workflows/: ci.yml
docs/: API_SIMPLIFICATION.md  CONTRIBUTING.md  README.md  api-changelog.md  api.md  architecture.md  configuration.md  coverage.md  dependency-graph.md  getting-started.md  index.html  mkdocs.yml  modules.md
docs/examples/: advanced_usage.py  quickstart.py
examples/: CLI_CURL_GUIDE.md  README.md  app_integrations.py  applications.py  bash_examples.sh  new_features_demo.py  nlp_examples.sh  text2fraq_examples.py  text2fraq_files.py
examples/ai_ml/: simple_training_data.py  training_data.py
examples/basic/: app_integrations.py  applications.py  async_streaming.py  query_examples.py
examples/cli-docker/: Dockerfile  README.md  bash_examples.sh  docker-compose.yml  run.py  run.sh
examples/database/: sqlite_examples.py
examples/etl/: pipeline_examples.py  simple_pipeline_examples.py
examples/fastapi-docker/: Dockerfile  README.md  api_server.py  docker-compose.yml  main.py  run.py  run.sh
examples/fullstack-docker/: README.md  docker-compose.yml  run.py  run.sh
examples/integrations/: cli_chat_example.py  fastapi_example.py  flask_example.py  grpc_example.py  (+4 more)
fraq/: __init__.py  adapters.py  api.py  benchmarks.py  cli.py  core.py  dataframes.py  formats.py  generators.py  ifs.py  inference.py  query.py  schema_export.py  server.py  streaming.py  testing.py  text2fraq.py  types.py
project/: README.md  analysis.json  analysis.toon  analysis.toon.yaml  analysis.yaml  calls.mmd  calls.toon.yaml  calls.yaml  calls_fixed.mmd  compact_flow.mmd  context.md  dashboard.html  duplication.toon.yaml  evolution.toon  evolution.toon.yaml  flow.mmd  flow.toon  index.html  map.toon  map.toon.yaml  mermaid.export  project.toon  project.toon.yaml  project.yaml  prompt.txt
tests/: test_adapters.py  test_api_export.py  test_cli.py  test_core.py  test_dataframes.py  test_formats.py  test_generators.py  test_ifs.py  test_inference.py  test_new_features.py  test_providers.py  test_query.py  test_schema_export.py  test_streaming.py  test_testing.py  test_text2fraq.py
(+61 files in other folders)
